# typetag

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: web_event.rs
impl/: Cargo.toml  README.md
impl/src/: lib.rs  parse.rs  register.rs  tagged_impl.rs  tagged_trait.rs
macro/: Cargo.toml
macro/src/: lib.rs
src/: adjacently.rs  content.rs  de.rs  externally.rs  internally.rs  is_serialize_str.rs  lib.rs  private.rs  ser.rs
src/registry/: common.rs  mod.rs  registry_trait.rs  runtime.rs
tests/: test.rs
tests/ui/: associated-const.rs  associated-const.stderr  associated-type.rs  associated-type.stderr  deserialize-generic.rs  deserialize-generic.stderr  inherent-impl.rs  inherent-impl.stderr  not-trait-or-impl.rs  not-trait-or-impl.stderr  unnamed.rs  unnamed.stderr
