[package]
name = "typetag"
version = "0.1.8"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Serde serializable and deserializable trait objects"
repository = "https://github.com/dtolnay/typetag"
documentation = "https://docs.rs/typetag"
keywords = ["serde"]
categories = ["encoding"]
readme = "README.md"
edition = "2018"
rust-version = "1.37"

[workspace]
members = ["impl"]

[dependencies]
erased-serde = "0.3"
inventory = "0.2"
once_cell = "1.0"
serde = { version = "1.0", features = ["derive"] }
typetag-impl = { version = "=0.1.8", path = "impl" }

[dev-dependencies]
bincode = "1.0"
serde_json = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
