[package]
name = "typetag-impl"
version = "0.1.3"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Implementation detail of the typetag crate"
repository = "https://github.com/dtolnay/typetag"
documentation = "https://docs.rs/typetag"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = { version = "0.15", features = ["full"] }
