[package]
name = "typetag-impl"
version = "0.2.20"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Implementation detail of the typetag crate"
documentation = "https://docs.rs/typetag"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/typetag"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.74"
quote = "1.0.35"
syn = { version = "2.0.46", features = ["full"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
    "--extern-html-root-url=proc_macro=https://doc.rust-lang.org",
]
